# credible

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  unittest.yml
src/: main.rs
src/format/: mod.rs  pass.rs  userpass.rs
src/generate/: mod.rs  pass.rs  userpass.rs
